acceptance-tests/src/test/resources/tests/errors/module_and_class_collision/default_arguments/Kotlin.kt
package `tests`.`errors`.`module_and_class_collision`.`default_arguments`

class Kotlin {

    fun foo(i: Int = 0): Int = i
}
